Agendamento: Criando email para detalhes

--- a/.env
+++ b/.env
@@ -33,11 +33,20 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.hostinger.com
 MAIL_PORT=465
-MAIL_USERNAME=ascensaodev@smpsistema.com.br
-MAIL_PASSWORD=Senac@agencia04
+MAIL_USERNAME=cloudwise@smpsistema.com.br
+MAIL_PASSWORD=Senac@agencia03
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS="ascensaodev@smpsistema.com.br"
+MAIL_FROM_ADDRESS="cloudwise@smpsistema.com.br"
 MAIL_FROM_NAME="${APP_NAME}"
+
+# MAIL_MAILER=smtp
+# MAIL_HOST=sandbox.smtp.mailtrap.io
+# MAIL_PORT=2525
+# MAIL_USERNAME=5b6debcf3c3c45
+# MAIL_PASSWORD=8b55b8069ab26d
+# MAIL_ENCRYPTION=null
+# MAIL_FROM_ADDRESS=noreply@example.com
+# MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
