--- a/.env
+++ b/.env
@@ -20,7 +20,8 @@ DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+# QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=databasea
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -37,7 +38,17 @@ MAIL_USERNAME=cloudwise@smpsistema.com.br
 MAIL_PASSWORD=Senac@agencia03
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS="cloudwise@smpsistema.com.br"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_NAME="LE FLOWER"
+
+# MAIL_MAILER=smtp
+# MAIL_HOST=smtp.gmail.com
+# MAIL_PORT=587
+# MAIL_USERNAME=leflowersalao@gmail.com
+# MAIL_PASSWORD=ebunbhmnbccchzgg
+# MAIL_ENCRYPTION=tls
+# MAIL_FROM_ADDRESS=leflowersalao@gmail.com
+# MAIL_FROM_NAME="LE FLOWER"
+
 
 # MAIL_MAILER=smtp
 # MAIL_HOST=sandbox.smtp.mailtrap.io
