Agendamento: Confirmação de Agendamento OK

--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:/9a/TOm8XZuoD9jGib92y2P7q+F5wDldBB9Swb9nEf8=
 APP_DEBUG=true
-APP_URL=http://localhost
+# APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -21,7 +22,7 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 # QUEUE_CONNECTION=sync
-QUEUE_CONNECTION=databasea
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
