API + Agendamento: Ajustes listarHorarios no Controller e Agd funcionando

--- a/.env
+++ b/.env
@@ -32,23 +32,23 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.hostinger.com
-MAIL_PORT=465
-MAIL_USERNAME=cloudwise@smpsistema.com.br
-MAIL_PASSWORD=Senac@agencia03
-MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS="cloudwise@smpsistema.com.br"
-MAIL_FROM_NAME="LE FLOWER"
-
 # MAIL_MAILER=smtp
-# MAIL_HOST=smtp.gmail.com
-# MAIL_PORT=587
-# MAIL_USERNAME=leflowersalao@gmail.com
-# MAIL_PASSWORD=ebunbhmnbccchzgg
-# MAIL_ENCRYPTION=tls
-# MAIL_FROM_ADDRESS=leflowersalao@gmail.com
+# MAIL_HOST=smtp.hostinger.com
+# MAIL_PORT=465
+# MAIL_USERNAME=cloudwise@smpsistema.com.br
+# MAIL_PASSWORD=Senac@agencia03
+# MAIL_ENCRYPTION=ssl
+# MAIL_FROM_ADDRESS="cloudwise@smpsistema.com.br"
 # MAIL_FROM_NAME="LE FLOWER"
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=leflowersalao@gmail.com
+MAIL_PASSWORD=ebunbhmnbccchzgg
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=leflowersalao@gmail.com
+MAIL_FROM_NAME="LE FLOWER"
 
 
 # MAIL_MAILER=smtp
